# djangoblog

./: .firebaserc  .gitignore  Dockerfile  docker-compose.yml  mailgun_test.py  manage.py  package-lock.json  package.json  pyproject.toml  start-django.sh  tailwind.config.js
app/: admin.py  managers.py  models.py  urls.py  views.py
app/migrations/: 0001_initial.py  0002_create_superuser.py  0003_article_creator_alter_article_word_count.py  0004_alter_article_content_alter_article_creator_and_more.py  0005_alter_article_options_alter_userprofile_managers_and_more.py
djangoblogsite/: asgi.py  settings.py  urls.py  wsgi.py
locale/es/LC_MESSAGES/: django.po
locale/fr/LC_MESSAGES/: django.po
static/: output.css
staticfiles/: input.5af2480b1cdf.css  input.5af2480b1cdf.css.br  output.css.br  staticfiles.json
staticfiles/debug_toolbar/css/: toolbar.5967b40ffc7d.css.br
templates/: base.html
templates/account/: login.html  signup.html
templates/allauth/elements/: field.html  provider.html
templates/allauth/layouts/: base.html
templates/app/: article_create.html  article_delete.html  article_update.html  example.html  home.html
templates/app/layouts/: base_form.html
